2003-09-22  Francois Felix Ingrand  <felix@laas.fr>

	* README: creation...
	
$Id$